--- a/src/App.css
+++ b/src/App.css
@@ -184,6 +184,10 @@ nav ul li:hover{
 .cont-activities div{
 }
 
+
+
+
+
 .sect-tasks{
     width: 50%;
     display: flex;
@@ -194,7 +198,32 @@ nav ul li:hover{
 
 }
 
+.sect-tasks .first .cont-tasks{
+    
+}
 
+
+
+.sect-tasks .first{
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.sect-tasks .first .title-misTareas{
+    padding: 20px;
+}
+
+
+.sect-tasks .second{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 20%;
+}
 
 .cont-tasks{
     display: flex;
@@ -215,4 +244,34 @@ nav ul li:hover{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.draggable .task-drag{
+    width: 75%;
+    text-align: center;
+}
+
+.draggable .cont-btnHandle{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    width: 25%;
+}
+
+.btn-handle{
+    background-color: #00464300;
+    border: none;
+    font-size: 100%;
+    cursor: grab;
+    padding: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-handle:hover{
+    background-color: #00272559;
+    
 }
